--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: 
   facebook:
   flickr:
-  github: chinazhoujunbo.github.io
+  github: grum.github.io
   instagram:
   linkedin:
   pinterest:
