--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: 
   facebook:
   flickr:
-  github: zhoujunbo.github.io
+  github: https://github.com/chinazhoujunbo
   instagram:
   linkedin:
   pinterest:
